--- a/janken.html
+++ b/janken.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./janken.css">
 </head>
 <body>
+<!-- <button class="riset">リセット</button> -->
+<img src="./l.png" alt="" class="l">
 
     <div class="ho">
     <img src="" alt="" class="r">
@@ -23,6 +25,10 @@
   
 
 <h1 class="c">じゃんけん</h1>
+<audio src="./audio/janken.mp3" class="jkp"></audio>
+<audio src="audio/aikodesho.mp3" class="ai"></audio>
+<h1 class="ten1">スコア</h1>
+<h1 class="ten">0</h1>
      
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./janken/janken.js"></script>
